--- a/pages/19675.html
+++ b/pages/19675.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Stephen Lack in nLab
+      Anton Deitmar in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Stephen Lack
+      Anton Deitmar
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8969/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,16 +309,22 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>related Lab entries</title></head>
 <body>
-<p>Stephen Lack (commonly known as ‘Steve’) is an Australian <a class="existingWikiWord" href="/nlab/show/category+theory">category theorist</a> with notable contributions to <a class="existingWikiWord" href="/nlab/show/2-category+theory">2-category theory</a>.</p>
+<ul>
+<li><a href="http://www.math.uni-tuebingen.de/user/deitmar/">webpage</a></li>
+</ul>
 
-<p>He was winner of <a href="http://www.austms.org.au/The+Australian+Mathematical+Society+Medal">The Australian Mathematical Society Medal</a> for 2009.</p>
-
-<p>He is on the Steering Board of the Journal ‘Compositionality’.</p>
+<h2 id="related_lab_entries">related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
-<li><a href="http://maths.mq.edu.au/~slack/">Homepage</a> of Steve Lack.</li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/field+with+one+element">field with one element</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a>, <a class="existingWikiWord" href="/nlab/show/K-theory+of+a+permutative+category">K-theory of a permutative category</a></p>
+</li>
 </ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
@@ -326,22 +332,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 03:25:54.
-  See the <a href="https://ncatlab.org/nlab/history/Stephen Lack" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on September 11, 2018 at 03:56:27.
+  See the <a href="https://ncatlab.org/nlab/history/Anton Deitmar" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Stephen+Lack" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Stephen+Lack/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Stephen+Lack" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Stephen+Lack" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Stephen Lack/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/Anton+Deitmar" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/Anton Deitmar/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Stephen+Lack" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/Anton+Deitmar" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Stephen+Lack" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/Anton+Deitmar" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Stephen+Lack" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/Anton+Deitmar" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
