--- a/pages/8003.html
+++ b/pages/8003.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/3976/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/3976/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -676,7 +676,7 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#Definition">Definition</a><ul><li><a href="#via_topological_group_completion">Via topological group completion</a></li><li><a href="#via_gamma_spaces">Via Gamma spaces</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#Definition">Definition</a><ul><li><a href="#via_topological_group_completion">Via topological group completion</a></li><li><a href="#via_gamma_spaces">Via Gamma spaces</a></li></ul></li><li><a href="#Examples">Examples</a></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
 <h2 id="idea">Idea</h2>
 
 <p>To a <a class="existingWikiWord" href="/nlab/show/permutative+category">permutative category</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math> is naturally associated a <a class="existingWikiWord" href="/nlab/show/Gamma-space">Gamma-space</a>, hence a <a class="existingWikiWord" href="/nlab/show/symmetric+spectrum">symmetric spectrum</a>. The <a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">generalized (Eilenberg-Steenrod) cohomology</a> theory <a class="existingWikiWord" href="/nlab/show/Brown+representability+theorem">represented</a> by this is called the <em>(<a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic</a>) <a class="existingWikiWord" href="/nlab/show/K-theory">K-theory</a></em> of (or represented by) <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>C</mi></mrow><annotation encoding="application/x-tex">C</annotation></semantics></math>.</p>
@@ -719,6 +719,59 @@ margin-left: 0em;
 
 <p>(<a href="#ElmendorfMandell06">Elmendorf-Mandell, def. 4.3</a>)</p>
 
+<h2 id="Examples">Examples</h2>
+
+<div class="num_example" id="OrdinaryAlgebraicKTheoryFromPermutativeCategoryOfProjectiveModules">
+<h6 id="example">Example</h6>
+
+<p><strong>(ordinary <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a>)</strong></p>
+
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math> a <a class="existingWikiWord" href="/nlab/show/commutative+ring">commutative ring</a>, let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi><mo>=</mo><mi>R</mi><msub><mi>Mod</mi> <mi>pr</mi></msub></mrow><annotation encoding="application/x-tex">\mathcal{C} = R Mod_{pr}</annotation></semantics></math> its <a class="existingWikiWord" href="/nlab/show/category+of+modules">category of</a> <a class="existingWikiWord" href="/nlab/show/projective+modules">projective modules</a> regared as a <a class="existingWikiWord" href="/nlab/show/permutative+category">permutative category</a>. Then</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mi>R</mi><msub><mi>Mod</mi> <mi>pr</mi></msub><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mi>K</mi><mi>R</mi></mrow><annotation encoding="application/x-tex">
+  K (R Mod_{pr}) \;\simeq\; K R
+
+</annotation></semantics></math></div>
+<p>is the ordinary <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a> spectrum of the ring <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>R</mi></mrow><annotation encoding="application/x-tex">R</annotation></semantics></math>.</p>
+</div>
+
+<p>(e.g. <a href="#ElmendorfMandell04">Elmendorf-Mandell 04, p. 10</a>).</p>
+
+<div class="num_example" id="StableCohomotopyIsKTheoryOfFinSet">
+<h6 id="example_2">Example</h6>
+
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a> is K-theory of <a class="existingWikiWord" href="/nlab/show/FinSet">FinSet</a>)</strong></p>
+
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒞</mi><mo>=</mo></mrow><annotation encoding="application/x-tex">\mathcal{C} = </annotation></semantics></math> <a class="existingWikiWord" href="/nlab/show/FinSet">FinSet</a> be a <a class="existingWikiWord" href="/nlab/show/skeleton">skeleton</a> of the category of <a class="existingWikiWord" href="/nlab/show/finite+sets">finite sets</a>, regarded as a <a class="existingWikiWord" href="/nlab/show/permutative+category">permutative category</a>. Then</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>K</mi><mo stretchy="false">(</mo><mi>FinSet</mi><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mi>𝕊</mi></mrow><annotation encoding="application/x-tex">
+  K(FinSet) \;\simeq\; \mathbb{S}
+
+</annotation></semantics></math></div>
+<p>is the <a class="existingWikiWord" href="/nlab/show/sphere+spectrum">sphere spectrum</a>, hence represents the <a class="existingWikiWord" href="/nlab/show/cohomology+theory">cohomology theory</a> called <em><a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a></em>.</p>
+</div>
+
+<p>(<a href="#Segal74">Segal 74, Prop. 3.5</a>)</p>
+
+<div class="num_example" id="StableCohomotopyIsAlgebraicKTheoryOverFieldWithOneElement">
+<h6 id="remark">Remark</h6>
+
+<p><strong>(<a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a> as <a class="existingWikiWord" href="/nlab/show/algebraic+K-theory">algebraic K-theory</a> over the <a class="existingWikiWord" href="/nlab/show/field+with+one+element">field with one element</a>)</strong></p>
+
+<p>Since <a class="existingWikiWord" href="/nlab/show/pointed+sets">pointed</a> <a class="existingWikiWord" href="/nlab/show/finite+sets">finite sets</a> may be regarded as the modules over the “<a class="existingWikiWord" href="/nlab/show/field+with+one+element">field with one element</a>” <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math> (see <a href="field+with+one+element#Modules">there</a>),</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub><mi>Mod</mi><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><msup><mi>FinSet</mi> <mrow><mo>*</mo><mo stretchy="false">/</mo></mrow></msup></mrow><annotation encoding="application/x-tex">
+  \mathbb{F}_1 Mod
+  \;=\;
+  FinSet^{\ast/}
+
+</annotation></semantics></math></div>
+<p>one may read example <a class="maruku-ref" href="#StableCohomotopyIsKTheoryOfFinSet"></a> in view of example <a class="maruku-ref" href="#OrdinaryAlgebraicKTheoryFromPermutativeCategoryOfProjectiveModules"></a> as saying that <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a> is the algebraic K-theory of the <a class="existingWikiWord" href="/nlab/show/field+with+one+element">field with one element</a>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>K</mi><msub><mi>𝔽</mi> <mn>1</mn></msub><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><mi>𝕊</mi><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+  K \mathbb{F}_1 \;=\; \mathbb{S}
+  \,.
+
+</annotation></semantics></math></div>
+<p>This perspective is highlighted for instance in (<a href="#Deitmar06">Deitmar 06, p. 2</a>, <a href="#Guillot06">Guillot 06</a>).</p>
+</div>
+
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -742,7 +795,7 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Daniel+Quillen">Daniel Quillen</a>, <em>On the group completion of a simplicial monoid</em></p>
 </li>
 
-<li id="Segal">
+<li id="Segal74">
 <p><a class="existingWikiWord" href="/nlab/show/Graeme+Segal">Graeme Segal</a>, <em>Catgeories and cohomology theories</em>, Topology vol 13 (1974) (<a href="http://ncatlab.org/nlab/files/SegalCategoriesAndCohomologyTheories.pdf">pdf</a>)</p>
 </li>
 
@@ -762,12 +815,24 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Anthony+Elmendorf">Anthony Elmendorf</a>, <a class="existingWikiWord" href="/nlab/show/Michael+Mandell">Michael Mandell</a>, <em>Permutative categories as a model of connective stable homotopy</em>, in: <a class="existingWikiWord" href="/nlab/show/Birgit+Richter">Birgit Richter</a> (ed.) <em>Structured Ring spectra</em>, Cambridge University Press (2004)</p>
 </li>
 
-<li id="ElmendorfMandell06">
-<p><a class="existingWikiWord" href="/nlab/show/Anthony+Elmendorf">Anthony Elmendorf</a>, <a class="existingWikiWord" href="/nlab/show/Michael+Mandell">Michael Mandell</a>, <em>Rings, modules and algebras in infinite loop space theory</em>, K-Theory 0680 (<a href="http://www.math.uiuc.edu/K-theory/0680/">web</a>, <a href="http://www.math.uiuc.edu/K-theory/0680/RMAsubmit.pdf">pdf</a>)</p>
+<li id="ElmendorfMandell04">
+<p><a class="existingWikiWord" href="/nlab/show/Anthony+Elmendorf">Anthony Elmendorf</a>, <a class="existingWikiWord" href="/nlab/show/Michael+Mandell">Michael Mandell</a>, <em>Rings, modules and algebras in infinite loop space theory</em>, Adv. in Math. 205 (2006), no. 1, 163-228 (<a href="https://arxiv.org/abs/math/0403403">arXiv:math/0403403</a>)</p>
 </li>
 
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Anthony+Elmendorf">Anthony Elmendorf</a>, <a class="existingWikiWord" href="/nlab/show/Michael+Mandell">Michael Mandell</a>, <em>Permutative categories, multicategories, and algebraic K-theory</em>, Algebraic &amp; Geometric Topology 9 (2009) 2391-2441 (<a href="http://arxiv.org/abs/0710.0082">arXiv:0710.0082v2</a>)</p>
+<li id="ElmendorfMandell09">
+<p><a class="existingWikiWord" href="/nlab/show/Anthony+Elmendorf">Anthony Elmendorf</a>, <a class="existingWikiWord" href="/nlab/show/Michael+Mandell">Michael Mandell</a>, <em>Permutative categories, multicategories, and algebraic K-theory</em>, Algebraic &amp; Geometric Topology 9 (2009) 2391-2441 (<a href="http://arxiv.org/abs/0710.0082">arXiv:0710.0082</a>, <a href="https://projecteuclid.org/euclid.agt/1513797088">euclid:1513797088</a>)</p>
+</li>
+</ul>
+
+<p>The interpretation of <a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a> as the algebraic K-theory over the <a class="existingWikiWord" href="/nlab/show/field+with+one+element">field with one element</a> is adopted in</p>
+
+<ul>
+<li id="Deitmar06">
+<p><a class="existingWikiWord" href="/nlab/show/Anton+Deitmar">Anton Deitmar</a>, <em>Remarks on zeta functions and K-theory over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>𝔽</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">\mathbb{F}_1</annotation></semantics></math></em> (<a href="https://arxiv.org/abs/math/0605429">arXiv:math/0605429</a>)</p>
+</li>
+
+<li id="Guillot06">
+<p><a class="existingWikiWord" href="/nlab/show/Pierre+Guillot">Pierre Guillot</a>, <em>Adams operations in cohomotopy</em> (<a href="https://arxiv.org/abs/math/0612327">arXiv:0612327</a>)</p>
 </li>
 </ul>
 </body></html>
@@ -776,14 +841,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 10, 2018 at 15:50:36.
+  Last revised on September 11, 2018 at 03:54:21.
   See the <a href="https://ncatlab.org/nlab/history/K-theory of a permutative category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/K-theory+of+a+permutative+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K-theory+of+a+permutative+category/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/K-theory+of+a+permutative+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K-theory+of+a+permutative+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/K-theory+of+a+permutative+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/K-theory+of+a+permutative+category/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/K-theory+of+a+permutative+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/K-theory+of+a+permutative+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/K-theory of a permutative category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
